[gd_scene load_steps=16 format=2]

[ext_resource path="res://niveles/nivel_10_save_system/WindowDialog_save.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/sprites/Flag/Flag 01.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/Flag/Flag 06.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/Flag/Flag 08.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/Flag/Flag 02.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/Flag/Flag 04.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/Flag/Flag 03.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/Flag/Platform.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/Flag/Flag 07.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/Flag/Flag 09.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/Flag/Flag 05.png" type="Texture" id=11]
[ext_resource path="res://niveles/nivel_10_save_system/save_point.gd" type="Script" id=12]
[ext_resource path="res://res/pyrate_theme.tres" type="Theme" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 11 ), ExtResource( 3 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 23.0

[node name="Area2D" type="Area2D" groups=["save_point"]]
pause_mode = 2
script = ExtResource( 12 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 15, -46 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="Platform" type="Sprite" parent="."]
position = Vector2( 0, -29 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -23 )
shape = SubResource( 2 )

[node name="WindowDialog_save" parent="." instance=ExtResource( 1 )]

[node name="Label" type="Label" parent="."]
margin_left = -20.0
margin_top = -63.0
margin_right = 20.0
margin_bottom = -45.0
theme = ExtResource( 13 )
text = "SAVE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area2D_body_exited"]
